--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.0.2",
